force-app/main/default/objects/Membership__c/fields/Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Date__c</fullName>
    <inlineHelpText>Date the signed agreement was received by the SCCH.</inlineHelpText>
    <label>Signed Agreement Received</label>
    <type>Date</type>
</CustomField>