force-app/main/default/objects/Membership__c/fields/Agreement_Modification__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Modification__c</fullName>
    <inlineHelpText>Type(s) of modification made to the membership agreement</inlineHelpText>
    <label>Agreement Modification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement term (1 year standard)</fullName>
            </value>
            <value>
                <fullName>Cancellation terms (60 days standard)</fullName>
            </value>
            <value>
                <fullName>Consultation visit access</fullName>
            </value>
            <value>
                <fullName>Evaluation forms (1 month standard)</fullName>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>Indemnification</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Member Listing</fullName>
            </value>
            <value>
                <fullName>Payment terms (45 days standard)</fullName>
            </value>
            <value>
                <fullName>Publications</fullName>
            </value>
            <value>
                <fullName>Recording</fullName>
            </value>
            <value>
                <fullName>Rounds per year (minimum 6 standard)</fullName>
            </value>
            <value>
                <fullName>Sign-in sheets</fullName>
            </value>
            <value>
                <fullName>Termination terms (30 days standard)</fullName>
            </value>
            <value>
                <fullName>Visitors</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Multi-Year Pricing</fullName>
            </value>
            <value>
                <fullName>Pricing/Invoicing</fullName>
            </value>
            <value>
                <fullName>Auto-Renewal</fullName>
            </value>
            <value>
                <fullName>Agreement Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>