force-app/main/default/objects/Membership__c/fields/Agreement_Modification_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Modification_Expiration__c</fullName>
    <label>Agreement Modification Expiration</label>
    <type>Date</type>
</CustomField>