force-app/main/default/objects/Membership__c/fields/Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed__c</fullName>
    <formula>if( isblank(Agreement_Date__c),FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>