force-app/main/default/objects/Membership__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration (LT)</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>