force-app/main/default/objects/Membership__c/fields/Current_Payment_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Current_Payment_Amount_Due__c</fullName>
    <label>Current Payment Amount Due</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>