force-app/main/default/objects/Membership__c/fields/Date_of_Earliest_Payment_Due_SYSTEM__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Earliest_Payment_Due_SYSTEM__c</fullName>
    <description>Updated through rollup - displays date of earliest &apos;Renewal Date&apos; from pending opportunity</description>
    <inlineHelpText>Updated through rollup - displays date of earliest &apos;Renewal Date&apos; from pending opportunity</inlineHelpText>
    <label>Date of Earliest Payment Due_SYSTEM</label>
    <type>Date</type>
</CustomField>