force-app/main/default/objects/Membership__c/fields/Date_Original_Agreement_was_Sent_Out__c.field-meta.xml
<CustomField>
    <fullName>Date_Original_Agreement_was_Sent_Out__c</fullName>
    <inlineHelpText>Date the original membership agreement was sent out.</inlineHelpText>
    <label>Agreement Sent</label>
    <type>Date</type>
</CustomField>