force-app/main/default/objects/Membership__c/fields/Discussion_in_Teams__c.field-meta.xml
<CustomField>
    <fullName>Discussion_in_Teams__c</fullName>
    <label>Discussion in Teams</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>