force-app/main/default/objects/Membership__c/fields/Fees_covered_by_GNYHA_after_1_1_23__c.field-meta.xml
<CustomField>
    <fullName>Fees_covered_by_GNYHA_after_1_1_23__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, GNYHA has agreed to continue covering SCCH fees for this member beyond Jan 1, 2023. See Opportunity list to see GNYHA coverage in previous years.</inlineHelpText>
    <label>Fees covered by GNYHA after 1/1/23?</label>
    <type>Checkbox</type>
</CustomField>