force-app/main/default/objects/Membership__c/fields/Funding_Note__c.field-meta.xml
<CustomField>
    <fullName>Funding_Note__c</fullName>
    <description>Any information re the source of their funding for Schwartz Center membership or program fees, e.g., HR department, chaplaincy department, private donor, grant, etc.</description>
    <inlineHelpText>Any information re the source of their funding for Schwartz Center membership or program fees, e.g., HR department, chaplaincy department, private donor, grant, etc.</inlineHelpText>
    <label>Budget/Funding Note</label>
    <type>TextArea</type>
</CustomField>