force-app/main/default/objects/Membership__c/fields/Group_Member_Site__c.field-meta.xml
<CustomField>
    <fullName>Group_Member_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This site is a member of a health system that has X other sites as members, so each receives a discount on their membership fees.They each have individual agreements and separate invoicing.</description>
    <inlineHelpText>This site is a member of a health system that has X other sites as members, so each receives a discount on their membership fees.They each have individual agreements and separate invoicing.</inlineHelpText>
    <label>Invoice Individual Site</label>
    <type>Checkbox</type>
</CustomField>