force-app/main/default/objects/Membership__c/fields/Initial_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Payment_Date__c</fullName>
    <label>Initial Payment Date</label>
    <type>Date</type>
</CustomField>