force-app/main/default/objects/Membership__c/fields/Member_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Member_Bucket__c</fullName>
    <formula>IF(
    ISBLANK(TEXT  (Account__r.Member_Type__c)),
    NULL,
    TEXT  ( Account__r.Member_Type__c ) + &quot; - &quot;
) + 
IF(
    ISBLANK(TEXT(NEW_Pricing__c )),
    NULL,
    TEXT( NEW_Pricing__c )+ &quot; - &quot;
) +
IF (  Account__r.Greater_NY_Hospital_Association__c, &quot;GNYHA&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Bucket</label>
    <type>Text</type>
</CustomField>