force-app/main/default/objects/Membership__c/fields/Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Status__c</fullName>
    <label>Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Member</fullName>
            </value>
            <value>
                <fullName>Active Member - Non-Rounds</fullName>
            </value>
            <value>
                <fullName>Active Member - Affiliate</fullName>
            </value>
            <value>
                <fullName>Active Member - On Hold</fullName>
            </value>
            <value>
                <fullName>Active Member - From Transfer</fullName>
            </value>
            <value>
                <fullName>Active System Member</fullName>
            </value>
            <value>
                <fullName>Agreement Pending/Payment Received</fullName>
            </value>
            <value>
                <fullName>Agreement Pending/Payment Pending</fullName>
            </value>
            <value>
                <fullName>Agreement Signed/Payment Pending</fullName>
            </value>
            <value>
                <fullName>Former Member</fullName>
            </value>
            <value>
                <fullName>Former System Member</fullName>
            </value>
            <value>
                <fullName>Former Member - Transferred</fullName>
            </value>
            <value>
                <fullName>Pending - Withdrawn</fullName>
            </value>
            <value>
                <fullName>Pending - On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>