force-app/main/default/objects/Membership__c/fields/Membership_Enrollment_ID__c.field-meta.xml
<CustomField>
    <fullName>Membership_Enrollment_ID__c</fullName>
    <label>Membership Enrollment ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>