force-app/main/default/objects/Membership__c/fields/Membership_Length__c.field-meta.xml
<CustomField>
    <fullName>Membership_Length__c</fullName>
    <description>Length of membership in years for former members</description>
    <formula>(Membership_End_Date__c-Membership_Start_Date__c) / 365</formula>
    <inlineHelpText>For former members, this field calculates the length of their membership in years.</inlineHelpText>
    <label>Membership Length (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>