force-app/main/default/objects/Membership__c/fields/Membership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Start_Date__c</fullName>
    <formula>IF( NOT(ISBLANK(Overridden_Membership_Start_Date__c)),
Overridden_Membership_Start_Date__c,
IF( 
AND(
ISBLANK(Overridden_Membership_Start_Date__c), 
Initial_Payment_Date__c &gt;=  Agreement_Date__c ),
Initial_Payment_Date__c,
IF( 
AND(
ISBLANK(Overridden_Membership_Start_Date__c), 
Initial_Payment_Date__c &lt;  Agreement_Date__c ),
Agreement_Date__c,
NULL)))</formula>
    <inlineHelpText>Calculates the later of Initial Payment Date and Agreement Date</inlineHelpText>
    <label>Membership Start Date</label>
    <type>Date</type>
</CustomField>