force-app/main/default/objects/Membership__c/fields/Membership_Start_Date_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Membership_Start_Date_Overridden__c</fullName>
    <formula>if(
 NOT(ISNULL(Overridden_Membership_Start_Date__c )),
True,
False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Start Date Overridden</label>
    <type>Checkbox</type>
</CustomField>