force-app/main/default/objects/Membership__c/fields/Modification_Details__c.field-meta.xml
<CustomField>
    <fullName>Modification_Details__c</fullName>
    <inlineHelpText>Specifics of modifications made to the agreement</inlineHelpText>
    <label>Modification Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>