force-app/main/default/objects/Membership__c/fields/MultiSite_Member__c.field-meta.xml
<CustomField>
    <fullName>MultiSite_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>MultiSites are single members that hold Rounds at/for multiple sites. They pay only one annual membership fee (the same site pays each year). They have one Rounds team and receive one set of member benefits.</inlineHelpText>
    <label>MultiSite Member</label>
    <type>Checkbox</type>
</CustomField>