force-app/main/default/objects/Membership__c/fields/NEW_Pricing__c.field-meta.xml
<CustomField>
    <fullName>NEW_Pricing__c</fullName>
    <description>Fee for one year of membership beginning 2020</description>
    <inlineHelpText>Fee for one year of membership beginning 2020</inlineHelpText>
    <label>NEW Pricing 2020/2021</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2995</fullName>
            </value>
            <value>
                <fullName>2700</fullName>
            </value>
            <value>
                <fullName>1200/2700</fullName>
            </value>
            <value>
                <fullName>900/2700</fullName>
            </value>
            <value>
                <fullName>1800 for 2 years</fullName>
                <label>1800 for 2 years through end of 2021</label>
            </value>
            <value>
                <fullName>NO FEE</fullName>
            </value>
            <value>
                <fullName>2900/2700</fullName>
            </value>
            <value>
                <fullName>900 through end of 2022</fullName>
            </value>
            <value>
                <fullName>TBA</fullName>
            </value>
            <value>
                <fullName>2500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>