force-app/main/default/objects/Membership__c/fields/Non_Automatic_Agreement_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Non_Automatic_Agreement_Renewal__c</fullName>
    <description>When to send a new agreement for signature, for non-automatic renewals.</description>
    <inlineHelpText>When to send a new agreement for signature, for members whose agreements don&apos;t renew automatically. Most membership agreements do renew automatically, so this field is blank for most members.</inlineHelpText>
    <label>Non-Automatic Agreement Renewal</label>
    <type>Date</type>
</CustomField>