force-app/main/default/objects/Membership__c/fields/ORIG_Rounds_Program__c.field-meta.xml
<CustomField>
    <fullName>ORIG_Rounds_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ORIG Rounds Program</label>
    <referenceTo>ORIG_Rounds_Program__c</referenceTo>
    <relationshipName>Membership_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>