force-app/main/default/objects/Membership__c/fields/Overridden_Membership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Overridden_Membership_Start_Date__c</fullName>
    <description>If this field is populated, overrides the standard Membership Start Date field</description>
    <inlineHelpText>If this field is populated, overrides the standard Membership Start Date field</inlineHelpText>
    <label>Overridden Membership Start Date</label>
    <type>Date</type>
</CustomField>