force-app/main/default/objects/Membership__c/fields/Overridden_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Overridden_Renewal_Date__c</fullName>
    <label>Overridden Renewal Date</label>
    <type>Date</type>
</CustomField>