force-app/main/default/objects/Membership__c/fields/Payment_Amount_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_Past_Due__c</fullName>
    <label>Payment Amount Past Due</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>