force-app/main/default/objects/Membership__c/fields/Payment_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Days__c</fullName>
    <formula>IF(Payment_Due_Date__c-today()&gt;1, 
&quot;Due in &quot;&amp;text(Payment_Due_Date__c-today())&amp;&quot; Days&quot;, 
if(Payment_Due_Date__c-today()=1, 
&quot;Due in &quot;&amp;text(Payment_Due_Date__c-today())&amp;&quot; Day&quot;, 
if(Payment_Due_Date__c-today()=0, 
&quot;Due Today&quot;, 
if(Payment_Due_Date__c-today()=-1, 
&quot;is &quot;&amp;text((Payment_Due_Date__c-today())*-1)&amp;&quot; Day Past Due&quot;, 
if(Payment_Due_Date__c-today()&lt;-1, 
&quot;is &quot;&amp;text((Payment_Due_Date__c-today())*-1)&amp;&quot; Days Past Due&quot;, 
&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>WARNING: This field may be inaccurate. Please clarify with finance until we get the formula fixed.</inlineHelpText>
    <label>TEST Payment Due Days</label>
    <type>Text</type>
</CustomField>