force-app/main/default/objects/Membership__c/fields/Payment_Due_Days_TESTING__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Days_TESTING__c</fullName>
    <formula>IF(Payment_Due_Date__c-Today_TESTING__c&gt;1, 
&quot;Due in &quot;&amp;text(Payment_Due_Date__c-Today_TESTING__c)&amp;&quot; Days&quot;, 
if(Payment_Due_Date__c-Today_TESTING__c=1, 
&quot;Due in &quot;&amp;text(Payment_Due_Date__c-Today_TESTING__c)&amp;&quot; Day&quot;, 
if(Payment_Due_Date__c-Today_TESTING__c=0, 
&quot;Due Today&quot;, 
if(Payment_Due_Date__c-Today_TESTING__c=-1, 
text((Payment_Due_Date__c-Today_TESTING__c)*-1)&amp;&quot; Day Past Due&quot;, 
if(Payment_Due_Date__c-Today_TESTING__c&lt;-1, 
text((Payment_Due_Date__c-Today_TESTING__c)*-1)&amp;&quot; Days Past Due&quot;, 
&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Due Days_TESTING</label>
    <type>Text</type>
</CustomField>