force-app/main/default/objects/Membership__c/fields/Pricing_Structure__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Structure__c</fullName>
    <label>OLD Pricing Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>