force-app/main/default/objects/Membership__c/fields/Renewal_Date_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_Overridden__c</fullName>
    <formula>if(
NOT(ISNULL(Overridden_Renewal_Date__c )),
True,
False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date Overridden</label>
    <type>Checkbox</type>
</CustomField>