force-app/main/default/objects/Membership__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MO-Agreement Signatory</fullName>
            </value>
            <value>
                <fullName>MO-Legal Contact (If to Member)</fullName>
            </value>
            <value>
                <fullName>Organizational Leader</fullName>
            </value>
            <value>
                <fullName>Primary Contact (TBD)</fullName>
            </value>
            <value>
                <fullName>System Contact - Membership &amp; Agreement</fullName>
            </value>
            <value>
                <fullName>System Contact - Member Communication</fullName>
            </value>
            <value>
                <fullName>System Steering Committee</fullName>
            </value>
            <value>
                <fullName>Schwartz Center System Champion</fullName>
            </value>
            <value>
                <fullName>MO-System Membership Agreement Signatory</fullName>
            </value>
            <value>
                <fullName>MO-System Membership Primary Contact</fullName>
            </value>
            <value>
                <fullName>MO-System Membership Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>