force-app/main/default/objects/Membership__c/fields/Rotating_or_Multi_Sites__c.field-meta.xml
<CustomField>
    <fullName>Rotating_or_Multi_Sites__c</fullName>
    <inlineHelpText>The member or site(s) that this member is in a Rotating or MultiSite arrangement with. List one per line.</inlineHelpText>
    <label>Rotating or Multi Sites</label>
    <type>TextArea</type>
</CustomField>