force-app/main/default/objects/Membership__c/fields/Rotating_Site_Member__c.field-meta.xml
<CustomField>
    <fullName>Rotating_Site_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Rotating Sites are pairs of members that pay only one membership fee each year (each site pays every other year), but receive two sets of member benefits. They may also alternate where they hold Rounds.</inlineHelpText>
    <label>Rotating Site Member</label>
    <type>Checkbox</type>
</CustomField>