force-app/main/default/objects/Membership__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
                <default>true</default>
                <label>Annually</label>
            </value>
            <value>
                <fullName>Biennially</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>