force-app/main/default/objects/Membership__c/fields/Send_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_Date__c</fullName>
    <formula>Payment_Due_Date__c  - 45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoice should be prepared and sent on this date, the payment due date minus 60 days</inlineHelpText>
    <label>Send Invoice Date</label>
    <type>Date</type>
</CustomField>