force-app/main/default/objects/Membership__c/fields/SFA_Included__c.field-meta.xml
<CustomField>
    <fullName>SFA_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this member is eligible to add SFA-TTT to their membership without additional charge until October 1, 2023.</description>
    <inlineHelpText>If checked, this member is eligible to add SFA-TTT to their active membership without additional charge until October 1, 2023.</inlineHelpText>
    <label>SFA-TTT Included</label>
    <type>Checkbox</type>
</CustomField>