force-app/main/default/objects/Membership__c/fields/System_Agreement_s__c.field-meta.xml
<CustomField>
    <fullName>System_Agreement_s__c</fullName>
    <label>System Agreement(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System-level agreement</fullName>
            </value>
            <value>
                <fullName>Individual agreement for each site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>