force-app/main/default/objects/Membership__c/fields/System_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>System_Invoicing__c</fullName>
    <label>System Invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice_System_Only</fullName>
                <label>Invoice System Only</label>
            </value>
            <value>
                <fullName>Invoice_Individual_site</fullName>
                <label>Invoice Individual Sites</label>
            </value>
            <value>
                <fullName>Site-level agreements - system invoice</fullName>
                <isActive>false</isActive>
                <label>Site-level agreements - system invoice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>