force-app/main/default/objects/Membership__c/fields/System_Member_Site__c.field-meta.xml
<CustomField>
    <fullName>System_Member_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System Member Site: This site is part of a system membership in which the system is a single member paying one central invoice for multiple sites.</description>
    <inlineHelpText>System Member Site: This site is part of a system membership in which the system is a single member paying one central invoice for multiple sites.</inlineHelpText>
    <label>Invoice System Only</label>
    <type>Checkbox</type>
</CustomField>