force-app/main/default/objects/Membership__c/fields/System_Membership_Agreement__c.field-meta.xml
<CustomField>
    <fullName>System_Membership_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The health system membership that entitles this site to either a group discount on their membership fee or that is paying membership fees on their behalf.</description>
    <inlineHelpText>The health system membership that entitles this site to either a group discount on their membership fee or that is paying membership fees on their behalf.</inlineHelpText>
    <label>System or Group Membership Agreement</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipName>Membership_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>