force-app/main/default/objects/Membership__c/fields/SYSTEM_Rollup_Recalculate_Date__c.field-meta.xml
<CustomField>
    <fullName>SYSTEM_Rollup_Recalculate_Date__c</fullName>
    <label>SYSTEM_Rollup Recalculate Date</label>
    <type>DateTime</type>
</CustomField>