force-app/main/default/objects/Membership__c/fields/SYSTEM_WorkflowBypass__c.field-meta.xml
<CustomField>
    <fullName>SYSTEM_WorkflowBypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SYSTEM_WorkflowBypass</label>
    <type>Checkbox</type>
</CustomField>