force-app/main/default/objects/Membership__c/fields/Today_TESTING__c.field-meta.xml
<CustomField>
    <fullName>Today_TESTING__c</fullName>
    <label>Today_TESTING</label>
    <type>Date</type>
</CustomField>