force-app/main/default/objects/Membership__c/validationRules/AMBLANKMDNOT.validationRule-meta.xml
<ValidationRule>
    <fullName>AMBLANKMDNOT</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
AND( ISBLANK ( Agreement_Modification__c ),
NOT ISBLANK( Modification_Details__c )),
OR(
Agreement_Modification_Expiration__c &lt;&gt;TODAY(),
ISNULL(Agreement_Modification_Expiration__c)
)
)</errorConditionFormula>
    <errorDisplayField>Agreement_Modification__c</errorDisplayField>
    <errorMessage>This field cannot be left blank unless the Modification Detail field is also blank.</errorMessage>
</ValidationRule>