force-app/main/default/objects/Membership__c/validationRules/MDBLANKAMNOT.validationRule-meta.xml
<ValidationRule>
    <fullName>MDBLANKAMNOT</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
AND( ISBLANK ( Modification_Details__c ),
NOT ISBLANK( Agreement_Modification__c )),
OR( 
Agreement_Modification_Expiration__c &lt;&gt;TODAY(), 
ISNULL(Agreement_Modification_Expiration__c) 
) 
)</errorConditionFormula>
    <errorMessage>This field cannot be left blank unless Agreement Modification is also blank.</errorMessage>
</ValidationRule>