force-app/main/default/objects/Membership__c/validationRules/Require_Agreement_Signed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Agreement_Signed_Date</fullName>
    <active>true</active>
    <errorConditionFormula>and(
ispickval(Member_Status__c ,&apos;Agreement Signed/Waiting for Payment&apos;),
isblank( Agreement_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Agreement_Date__c</errorDisplayField>
    <errorMessage>Please provide the date that the signed agreement was received.</errorMessage>
</ValidationRule>