force-app/main/default/objects/Membership__c/validationRules/Require_Date_Agreement_Sent_Out.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Date_Agreement_Sent_Out</fullName>
    <active>true</active>
    <errorConditionFormula>and(
or(
ispickval(Member_Status__c,&apos;Agreement Out for Signature/Waiting for Payment&apos;),
ispickval(Member_Status__c,&apos;Agreement Out for Signature/Payment Received&apos;)
),
isblank(Date_Original_Agreement_was_Sent_Out__c )
)</errorConditionFormula>
    <errorDisplayField>Date_Original_Agreement_was_Sent_Out__c</errorDisplayField>
    <errorMessage>Please provide that date that the agreement was sent out.</errorMessage>
</ValidationRule>